# nullptr_first_impression

./: AppManager.cpp  AppManager.h  CMakeLists.txt  DatasetUtils.cpp  DatasetUtils.h  README.md  TextLoader.cpp  TextLoader.h  TextLoaderTest.cpp  main.cpp  main_auxiliar.h  neural_network.h  nn_activation.h  nn_dense.h  nn_interfaces.h  nn_loss.h  nn_optimizer.h  tensor.h  training_words_eng.csv  training_words_esp.csv
